@@ -7,6 +7,8 @@
 * DistributedDoubleBarrier wasn't handling wait expiration correctly and was sending negative
 numbers to wait().
 
+* Issue 254: Check that executorService isn't null before closing.
+
 1.3.2 - February 6, 2013
 ========================
 * MAJOR BUG FIX - Issue 232: ZooKeeper guarantees that "A watch object, or function/context pair, will only
